--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "gray-matter": "^4.0.3",
   "next": "latest",
   "next-sitemap": "^4.2.3",
+  "next-themes": "^0.2.1",
   "path": "^0.12.7",
   "react": "18.2.0",
   "react-calendly": "^4.1.1",
